= Changelog

A release with an intentional breaking changes is marked with:

* [breaking] you probably need to change your code
* [minor breaking] you likely don't need to change your code

== Unreleased

* https://github.com/clj-commons/etaoin/issues/503[#503]: Address Clojure interop issue introduced by new Thread/sleep signature in JDK 19

== v1.0.38 [minor breaking]

Minor Breaking Changes

* https://github.com/clj-commons/etaoin/issues/412[#412]: Rename `etaoin.keys/num-.` to `etaoin.keys/num-dot`. +
The symbol `num-.` is technically an invalid Clojure symbol and can confuse tooling. +
A grep.app for `num-.` found Etaoin itself as the only user of this var.
If your code uses `etaoin.keys/num-.`, you'll need to rename it to `etaoin.keys/num-dot`.

* https://github.com/clj-commons/etaoin/issues/471[#471]: `etaoin.api/defaults` keyword `:path` renamed to `:path-driver` to match keyword used in driver options.

* https://github.com/clj-commons/etaoin/issues/430[#430]: Declare the public API.
We made what we think is a good guess at what the public Etaoin API is.
The following namespaces are now considered internal and subject to change:
+
[%autowidth]
|===
| old namespace | new internal namespace

| `etaoin.client`
| `etaoin.impl.client`

| `etaoin.driver`
| `etaoin.impl.driver`

| `etaoin.proc`
| `etaoin.impl.proc`

| `etaoin.util`
| `etaoin.impl.util`

| `etaoin.xpath`
| `etaoin.impl.xpath`

| `etaoin.ide.api`
| `etaoin.ide.impl.api`

| `etaoin.ide.spec`
| `etaoin.ide.impl.spec`

|===
+
The following vars are now considered internal and subject to change:
+
[%autowidth]
|===
| namespace | var

.16+|`etaoin.api`
| `default-locator`
| `dispatch-driver`
| `find-elements*`
| `format-date`
| `get-pwd`
| `join-path`
| `locator-css`
| `locator-xpath`
| `make-url`
| `make-screenshot-file-path`
| `postmortem-handler`
| `process-log`
| `proxy-env`
| `use-locator`
| `with-exception`
| `with-locator`

.8+| `etaoin.dev`
| `build-request`
| `group-requests`
| `log->request`