@@ -70,6 +70,10 @@ jobs:
       if: ${{ matrix.os == 'ubuntu' }}
       run: sudo apt-get -y install x11-utils
 
+    - name: Install Linux Windows Manager
+      if: ${{ matrix.os == 'ubuntu' }}
+      run: sudo apt-get -y install fluxbox
+
     - uses: actions/checkout@v3
 
     - name: Clojure deps cache
